# tau-hydrogen

./: .gitignore  AUTHORS  README.md  anda.hcl  index.theme  meson.build  meson_options.txt  symlinks.py  tau-hydrogen.spec
.github/workflows/: package.yml
Hydrogen/: index.theme  meson.build
Hydrogen/cursors/: cursor.theme  left_ptr.in  left_ptr_watch.in  meson.build  top_left_corner.in  top_right_corner.in  top_side.in  watch.in
cursors/: meson.build
palette/: Helium.gpl
